--- a/vit_cifar10.ipynb
+++ b/vit_cifar10.ipynb
@@ -1663,10 +1663,50 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "67626fb0",
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "777ce607",
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "from train import train\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09c3b09e",
+   "metadata": {},
+   "source": [
+    "WHAT IS WEIGHT DECAY HYPERPARAMETER???"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "062cd1fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optimizer = torch.optim.Adam(params=vit_model.parameters(),\n",
+    "                            lr=1e-3,\n",
+    "                            betas=(0.9, 0.999),\n",
+    "                            weight_decay=0.1)\n",
+    "\n",
+    "loss_fn = torch.nn.CrossEntropyLoss()\n",
+    "\n",
+    "torch.cuda.manual_seed(1)\n",
+    "np.random.seed(1)\n",
+    "\n",
+    "\n",
+    "results = train(model=vit_model,\n",
+    "                train_dataloader=train_dataloader,\n",
+    "                test_dataloader=test_dataloader,\n",
+    "                optimizer=optimizer,\n",
+    "                loss_fn=loss_fn,\n",
+    "                epochs=10,\n",
+    "                device=device) # Doesn't fit ???"
+   ]
   }
  ],
  "metadata": {
