--- a/vit_cifar_10.ipynb
+++ b/vit_cifar_10.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/emir/miniconda3/envs/mlptorch/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -18,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +60,7 @@
        "'cuda'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +146,7 @@
        "============================================================================================================================================"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +220,7 @@
        "torch.Size([32, 3, 224, 224])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +609,7 @@
        "============================================================================================================================================"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +690,7 @@
        "============================================================================================================================================"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,147 +707,203 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 10%|█         | 1/10 [11:31<1:43:47, 691.97s/it]"
+      "  7%|▋         | 1/14 [13:41<2:57:58, 821.44s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 1 | train_loss: 0.4643 | train_acc: 0.8985 | test_loss: 0.3813 | test_acc: 0.9026\n"
+      "Epoch: 1 | train_loss: 0.3398 | train_acc: 0.9057 | test_loss: 0.2416 | test_acc: 0.9240\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 20%|██        | 2/10 [23:04<1:32:17, 692.16s/it]"
+      " 14%|█▍        | 2/14 [25:17<2:29:30, 747.51s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 2 | train_loss: 0.3379 | train_acc: 0.9097 | test_loss: 0.3226 | test_acc: 0.9085\n"
+      "Epoch: 2 | train_loss: 0.2118 | train_acc: 0.9324 | test_loss: 0.2186 | test_acc: 0.9301\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 30%|███       | 3/10 [34:36<1:20:45, 692.26s/it]"
+      " 21%|██▏       | 3/14 [36:53<2:12:46, 724.25s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 3 | train_loss: 0.2961 | train_acc: 0.9161 | test_loss: 0.2954 | test_acc: 0.9122\n"
+      "Epoch: 3 | train_loss: 0.1919 | train_acc: 0.9382 | test_loss: 0.2077 | test_acc: 0.9313\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 40%|████      | 4/10 [46:09<1:09:13, 692.32s/it]"
+      " 29%|██▊       | 4/14 [48:30<1:58:55, 713.52s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 4 | train_loss: 0.2736 | train_acc: 0.9198 | test_loss: 0.2787 | test_acc: 0.9154\n"
+      "Epoch: 4 | train_loss: 0.1793 | train_acc: 0.9425 | test_loss: 0.2015 | test_acc: 0.9331\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 50%|█████     | 5/10 [57:41<57:41, 692.31s/it]  "
+      " 36%|███▌      | 5/14 [1:00:08<1:46:09, 707.68s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 5 | train_loss: 0.2588 | train_acc: 0.9227 | test_loss: 0.2672 | test_acc: 0.9186\n"
+      "Epoch: 5 | train_loss: 0.1707 | train_acc: 0.9445 | test_loss: 0.1965 | test_acc: 0.9360\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 60%|██████    | 6/10 [1:09:13<46:09, 692.37s/it]"
+      " 43%|████▎     | 6/14 [1:11:45<1:33:52, 704.07s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 6 | train_loss: 0.2479 | train_acc: 0.9245 | test_loss: 0.2587 | test_acc: 0.9200\n"
+      "Epoch: 6 | train_loss: 0.1640 | train_acc: 0.9470 | test_loss: 0.1939 | test_acc: 0.9355\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 70%|███████   | 7/10 [1:20:46<34:37, 692.38s/it]"
+      " 50%|█████     | 7/14 [1:23:22<1:21:51, 701.70s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 7 | train_loss: 0.2397 | train_acc: 0.9263 | test_loss: 0.2520 | test_acc: 0.9215\n"
+      "Epoch: 7 | train_loss: 0.1583 | train_acc: 0.9487 | test_loss: 0.1906 | test_acc: 0.9366\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 80%|████████  | 8/10 [1:32:18<23:04, 692.31s/it]"
+      " 57%|█████▋    | 8/14 [1:34:58<1:10:00, 700.16s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 8 | train_loss: 0.2328 | train_acc: 0.9279 | test_loss: 0.2466 | test_acc: 0.9217\n"
+      "Epoch: 8 | train_loss: 0.1536 | train_acc: 0.9504 | test_loss: 0.1886 | test_acc: 0.9383\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 90%|█████████ | 9/10 [1:43:50<11:32, 692.32s/it]"
+      " 64%|██████▍   | 9/14 [1:46:36<58:16, 699.27s/it]  "
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 9 | train_loss: 0.2272 | train_acc: 0.9291 | test_loss: 0.2419 | test_acc: 0.9229\n"
+      "Epoch: 9 | train_loss: 0.1495 | train_acc: 0.9520 | test_loss: 0.1870 | test_acc: 0.9385\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [1:55:23<00:00, 692.32s/it]"
+      " 71%|███████▏  | 10/14 [1:58:13<46:34, 698.52s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 10 | train_loss: 0.2225 | train_acc: 0.9302 | test_loss: 0.2382 | test_acc: 0.9238\n"
+      "Epoch: 10 | train_loss: 0.1461 | train_acc: 0.9528 | test_loss: 0.1853 | test_acc: 0.9392\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 79%|███████▊  | 11/14 [2:09:50<34:54, 698.10s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 11 | train_loss: 0.1430 | train_acc: 0.9534 | test_loss: 0.1848 | test_acc: 0.9406\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 86%|████████▌ | 12/14 [2:21:26<23:15, 697.58s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 12 | train_loss: 0.1404 | train_acc: 0.9545 | test_loss: 0.1829 | test_acc: 0.9401\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 93%|█████████▎| 13/14 [2:33:01<11:36, 696.76s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 13 | train_loss: 0.1377 | train_acc: 0.9548 | test_loss: 0.1830 | test_acc: 0.9399\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 14/14 [2:44:36<00:00, 705.44s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 14 | train_loss: 0.1353 | train_acc: 0.9557 | test_loss: 0.1824 | test_acc: 0.9408\n"
      ]
     },
     {
@@ -851,7 +916,7 @@
    ],
    "source": [
     "loss_fn = nn.CrossEntropyLoss()\n",
-    "optimizer = torch.optim.SGD(lr=0.001, params=vit_l_16_model.parameters())\n",
+    "optimizer = torch.optim.SGD(lr=0.001, params=vit_l_16_model.parameters(), momentum=0.9)\n",
     "manual_seed()\n",
     "from train_model import train\n",
     "vit_l_16_model_results = train(model=vit_l_16_model,\n",
@@ -860,7 +925,7 @@
     "                              optimizer=optimizer,\n",
     "                              loss_fn=loss_fn,\n",
     "                              device=device,\n",
-    "                              epochs=10)"
+    "                              epochs=14)"
    ]
   },
   {
